--- a/input.css
+++ b/input.css
@@ -1,1 +1,14 @@
-/* No CSS *//*# sourceMappingURL=input.css.map */
+* {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
+body {
+  color: #343434;
+  font-size: 1rem;
+  line-height: 1.5;
+  font-family: 'Raleway', sans-serif;
+  text-align: center;
+  margin: 0;
+}
+/*# sourceMappingURL=input.css.map */
