--- a/style.css
+++ b/style.css
@@ -1,13 +1,78 @@
-header a {
-  color: purple;
+* {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
 }
 
 body {
-  background-color: blue;
+  color: #343434;
+  font-size: 1rem;
+  line-height: 1.5;
+  font-family: 'Raleway', sans-serif;
+  text-align: center;
   margin: 0;
 }
 
-body h1 {
-  color: red;
+h1,
+h2 {
+  font-family: 'Bree Serif', serif;
+}
+
+ul {
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+}
+
+header {
+  height: 460px;
+  background: -webkit-gradient(linear, left top, left bottom, from(#009fe1), to(#3acec2)), url("../img/bg.jpg") no-repeat;
+  background: linear-gradient(#009fe1, #3acec2), url("../img/bg.jpg") no-repeat;
+  background-blend-mode: multiply;
+  background-size: cover;
+}
+
+header h1 {
+  color: #fff;
+  font-size: 4.8em;
+  margin-bottom: 0;
+  letter-spacing: 1px;
+}
+
+header p {
+  font-size: 1.25em;
+  margin: 0;
+}
+
+footer {
+  padding: 2em 0 0;
+  height: 100px;
+  background-color: #eee;
+  margin-top: 3.5em;
+}
+
+.inner {
+  padding: 0.5em 1em;
+}
+
+.intro {
+  margin: auto;
+  padding: 1em 1em 3em;
+}
+
+.main-nav {
+  margin-top: 1em;
+}
+
+.card {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  padding: 1.5em 1em;
+  border: 1px solid #eee;
+  border-radius: .25em;
 }
 /*# sourceMappingURL=style.css.map */
