--- a/style.scss
+++ b/style.scss
@@ -1,17 +1,70 @@
-$color1: blue;
-$color2: red;
-$color3: purple;
-
-header {
-  a {
-    color: $color3;
-  }
+* {
+  box-sizing: border-box;
 }
+
 body {
-  background-color: $color1;
+  color: #343434;
+  font-size: 1rem;
+  line-height: 1.5;
+  font-family: 'Raleway', sans-serif;
+  text-align: center;
   margin: 0;
-  h1{
-    color: $color2;
-  }
 }
 
+h1,
+h2 {
+  font-family: 'Bree Serif', serif;
+}
+
+ul {
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+}
+header {
+  height: 460px;
+  background: linear-gradient(#009fe1, #3acec2), 
+              url('../img/bg.jpg') no-repeat;
+  background-blend-mode: multiply;
+  background-size: cover;
+}
+
+header h1 {
+  color: #fff;
+  font-size: 4.8em;
+  margin-bottom: 0;
+  letter-spacing: 1px;
+}
+
+header p {
+  font-size: 1.25em;
+  margin: 0;
+}
+
+footer {
+  padding: 2em 0 0;
+  height: 100px;
+  background-color: #eee;
+  margin-top: 3.5em;
+}
+
+.inner {
+  padding: 0.5em 1em;
+}
+
+.intro {
+  margin: auto;
+  padding: 1em 1em 3em;
+}
+
+.main-nav {
+  margin-top: 1em;
+}
+
+.card {
+  display: flex;
+  flex-direction: column;
+  padding: 1.5em 1em;
+  border: 1px solid #eee;
+  border-radius: .25em;
+}
