--- a/style.css
+++ b/style.css
@@ -30,11 +30,54 @@ header {
   background-size: cover;
 }
 
+.text-left {
+  text-align: right;
+}
+
+.text-right {
+  text-align: left;
+}
+
+.img-left {
+  width: 100%;
+  height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+}
+
+.img-right {
+  width: 100%;
+  height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: flex-end;
+  margin: 0;
+}
+
+.img-culture {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+  margin: 0;
+  height: 450px;
+  width: 100%;
+}
+
 header h1 {
   color: #fff;
   font-size: 4.8em;
-  margin-bottom: 0;
   letter-spacing: 1px;
+  margin: 0;
 }
 
 header p {
@@ -72,6 +115,7 @@ footer {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
+  text-align: right;
 }
 
 .main-nav a {
@@ -83,27 +127,12 @@ footer {
   text-decoration: underline;
 }
 
-.card {
-  padding: 1.5em 1em;
-  border: 1px solid #eee;
-  border-radius: .25em;
-  margin-top: 100px;
-}
-
 .right {
-  text-align: center;
-  width: 50%;
-  margin-right: 0;
-  padding: 20px;
-  margin-left: auto;
-}
-
-.left {
-  text-align: center;
-  width: 50%;
-  margin-left: 0;
-  padding: 20px;
-  margin-right: auto;
+  margin-top: 10em;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 50% 50%;
+      grid-template-columns: 50% 50%;
 }
 
 .card h1 {
