--- a/style.scss
+++ b/style.scss
@@ -28,11 +28,39 @@ header {
   background-size: cover;
 }
 
+.text-left {
+  text-align: right;
+}
+
+.text-right {
+  text-align: left;
+}
+.img-left {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: flex-start; 
+}
+.img-right {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: flex-end; 
+  margin: 0;
+}
+
+.img-culture {
+  display: flex;
+  align-items: flex-start; 
+  margin: 0;
+  height:450px;
+  width: 100%;
+}
 header h1 {
   color: #fff;
   font-size: 4.8em;
-  margin-bottom: 0;
   letter-spacing: 1px;
+  margin: 0;  
 }
 
 header p {
@@ -65,6 +93,7 @@ footer {
   margin-top: 1em;
   display: flex;
   flex-direction: column;   
+  text-align: right;;
   a {
     color: white;
     text-decoration: none;
@@ -74,27 +103,12 @@ footer {
   }
 }
 
-.card {
-  padding: 1.5em 1em;
-  border: 1px solid #eee;
-  border-radius: .25em;
-  margin-top: 100px;
-}
 .right {
-  text-align: center;
-  width: 50%;
-  margin-right: 0;
-  padding: 20px;
-  margin-left: auto;
+  margin-top: 10em;
+  display: grid;
+  grid-template-columns: 50% 50%;
 }
 
-.left {
-  text-align: center;
-  width: 50%;
-  margin-left: 0;
-  padding: 20px;
-  margin-right: auto;
-}
 .card h1 {
   color: #2aa2bd; 
   margin: 0.35em 0 0;
