--- a/style.css
+++ b/style.css
@@ -32,10 +32,14 @@ header {
 
 .text-left {
   text-align: right;
+  margin: 0;
+  margin-left: 30%;
 }
 
 .text-right {
   text-align: left;
+  margin: 0;
+  margin-right: 30%;
 }
 
 .img-left {
@@ -58,6 +62,10 @@ header {
   -webkit-box-align: end;
       -ms-flex-align: end;
           align-items: flex-end;
+  margin: 0;
+}
+
+div.text {
   margin: 0;
 }
 
@@ -85,10 +93,6 @@ header p {
   margin: 0;
 }
 
-.text {
-  margin: 10px;
-}
-
 footer {
   padding: 2em 0 0;
   height: 100px;
@@ -107,6 +111,7 @@ footer {
 }
 
 .main-nav {
+  font-size: 2em;
   margin-top: 1em;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -128,11 +133,11 @@ footer {
 }
 
 .right {
-  margin-top: 10em;
   display: -ms-grid;
   display: grid;
   -ms-grid-columns: 50% 50%;
       grid-template-columns: 50% 50%;
+  margin: 20px;
 }
 
 .card h1 {
@@ -155,9 +160,153 @@ footer {
   border: 1pt solid black;
 }
 
-@media only screen and (min-width: 375px) {
+@media only screen and (max-width: 375px) {
   header {
     height: 300px;
+  }
+  header h1 {
+    margin-top: 40px;
+    font-size: 22pt;
+  }
+  header p {
+    font-size: 1em;
+  }
+  .img-culture {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: flex-start;
+    margin: 0;
+    height: 200px;
+    width: 100%;
+  }
+  .right {
+    margin-top: 3em;
+  }
+  p {
+    font-size: .3em;
+  }
+  .img-left {
+    width: 100%;
+    height: 200px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: flex-start;
+  }
+  .img-right {
+    width: 100%;
+    height: 200px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: end;
+        -ms-flex-align: end;
+            align-items: flex-end;
+    margin: 0;
+  }
+  .material-icons {
+    font-size: 20px;
+  }
+  .btn-info {
+    padding: 0.10em .5em;
+    border-radius: 0.35em;
+    font-size: 8px;
+  }
+  h1 {
+    font-size: 1em;
+  }
+  footer {
+    height: 50px;
+    padding: .8em;
+  }
+  div.text {
+    margin: 0;
+  }
+  .text-left {
+    margin-left: 10%;
+  }
+  .text-right {
+    margin-right: 10%;
+  }
+}
+
+@media only screen and (max-width: 414px) {
+  header {
+    height: 300px;
+  }
+  header h1 {
+    margin-top: 40px;
+    font-size: 22pt;
+  }
+  header p {
+    font-size: 1em;
+  }
+  .img-culture {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: flex-start;
+    margin: 0;
+    height: 200px;
+    width: 100%;
+  }
+  .right {
+    margin-top: 3em;
+  }
+  p {
+    font-size: .3em;
+  }
+  .img-left {
+    width: 100%;
+    height: 200px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: flex-start;
+  }
+  .img-right {
+    width: 100%;
+    height: 200px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: end;
+        -ms-flex-align: end;
+            align-items: flex-end;
+    margin: 0;
+  }
+  .material-icons {
+    font-size: 20px;
+  }
+  .btn-info {
+    padding: 0.10em .5em;
+    border-radius: 0.35em;
+    font-size: 8px;
+  }
+  h1 {
+    font-size: 1em;
+  }
+  footer {
+    height: 50px;
+    padding: .8em;
+  }
+  div.text {
+    margin: 0;
+  }
+  .text-left {
+    margin-left: 10%;
+  }
+  .text-right {
+    margin-right: 10%;
   }
 }
 /*# sourceMappingURL=style.css.map */
