--- a/style.scss
+++ b/style.scss
@@ -30,10 +30,14 @@ header {
 
 .text-left {
   text-align: right;
+  margin: 0;
+  margin-left: 30%;
 }
 
 .text-right {
   text-align: left;
+  margin: 0;
+  margin-right: 30%;
 }
 .img-left {
   width: 100%;
@@ -49,6 +53,9 @@ header {
   margin: 0;
 }
 
+div.text {
+  margin: 0;
+}
 .img-culture {
   display: flex;
   align-items: flex-start; 
@@ -69,9 +76,6 @@ header p {
   
 }
 
-.text {
-  margin: 10px;
-}
 footer {
   padding: 2em 0 0;
   height: 100px;
@@ -90,6 +94,7 @@ footer {
 }
 
 .main-nav {
+  font-size: 2em;
   margin-top: 1em;
   display: flex;
   flex-direction: column;   
@@ -104,9 +109,9 @@ footer {
 }
 
 .right {
-  margin-top: 10em;
   display: grid;
   grid-template-columns: 50% 50%;
+  margin: 20px;
 }
 
 .card h1 {
@@ -129,8 +134,128 @@ footer {
 }
 
 
-@media only screen and (min-width: 375px) {
+@media only screen and (max-width: 375px) {
   header {
     height: 300px;
+    h1 {
+      margin-top: 40px;
+      font-size: 22pt;
+      }
+    p {
+      font-size: 1em;  
+    }
+    }
+  .img-culture {
+    display: flex;
+    align-items: flex-start; 
+    margin: 0;
+    height:200px;
+    width: 100%;
+  }
+  .right {
+    margin-top: 3em;
+  }
+  p {
+    font-size: .3em;
+  }
+  .img-left {
+    width: 100%;
+    height: 200px;
+    display: flex;
+    align-items: flex-start; 
+  }
+  .img-right {
+    width: 100%;
+    height: 200px;
+    display: flex;
+    align-items: flex-end; 
+    margin: 0;
+  }
+  .material-icons {
+    font-size: 20px;
+  }
+  .btn-info {
+    padding: 0.10em .5em;
+    border-radius: 0.35em;
+    font-size: 8px;
+  }
+  h1 {
+    font-size: 1em;
+  }
+  footer {
+    height: 50px;
+    padding: .8em;
+  }
+  div.text {
+    margin: 0;
+  }
+  .text-left {
+    margin-left: 10%;
+  }
+  .text-right {
+    margin-right: 10%;
+  }
+}
+
+@media only screen and (max-width: 414px) {
+  header {
+    height: 300px;
+    h1 {
+      margin-top: 40px;
+      font-size: 22pt;
+      }
+    p {
+      font-size: 1em;  
+    }
+    }
+  .img-culture {
+    display: flex;
+    align-items: flex-start; 
+    margin: 0;
+    height:200px;
+    width: 100%;
+  }
+  .right {
+    margin-top: 3em;
+  }
+  p {
+    font-size: .3em;
+  }
+  .img-left {
+    width: 100%;
+    height: 200px;
+    display: flex;
+    align-items: flex-start; 
+  }
+  .img-right {
+    width: 100%;
+    height: 200px;
+    display: flex;
+    align-items: flex-end; 
+    margin: 0;
+  }
+  .material-icons {
+    font-size: 20px;
+  }
+  .btn-info {
+    padding: 0.10em .5em;
+    border-radius: 0.35em;
+    font-size: 8px;
+  }
+  h1 {
+    font-size: 1em;
+  }
+  footer {
+    height: 50px;
+    padding: .8em;
+  }
+  div.text {
+    margin: 0;
+  }
+  .text-left {
+    margin-left: 10%;
+  }
+  .text-right {
+    margin-right: 10%;
   }
 }
