--- a/style.css
+++ b/style.css
@@ -172,15 +172,8 @@ footer {
     font-size: 1em;
   }
   .img-culture {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-align: start;
-        -ms-flex-align: start;
-            align-items: flex-start;
     margin: 0;
     height: 200px;
-    width: 100%;
   }
   .right {
     margin-top: 3em;
@@ -189,24 +182,10 @@ footer {
     font-size: .3em;
   }
   .img-left {
-    width: 100%;
     height: 200px;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-align: start;
-        -ms-flex-align: start;
-            align-items: flex-start;
   }
   .img-right {
-    width: 100%;
     height: 200px;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-align: end;
-        -ms-flex-align: end;
-            align-items: flex-end;
     margin: 0;
   }
   .material-icons {
@@ -246,16 +225,12 @@ footer {
   header p {
     font-size: 1em;
   }
+  header .main-nav {
+    font-size: 1em;
+  }
   .img-culture {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-align: start;
-        -ms-flex-align: start;
-            align-items: flex-start;
     margin: 0;
     height: 200px;
-    width: 100%;
   }
   .right {
     margin-top: 3em;
@@ -264,24 +239,10 @@ footer {
     font-size: .3em;
   }
   .img-left {
-    width: 100%;
     height: 200px;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-align: start;
-        -ms-flex-align: start;
-            align-items: flex-start;
   }
   .img-right {
-    width: 100%;
     height: 200px;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-align: end;
-        -ms-flex-align: end;
-            align-items: flex-end;
     margin: 0;
   }
   .material-icons {
