--- a/style.scss
+++ b/style.scss
@@ -1,3 +1,7 @@
+$margin: 10%;
+$imgFull: 100%;
+$zero: 0;
+
 * {
   box-sizing: border-box;
 }
@@ -17,8 +21,8 @@ h2 {
 
 ul {
   list-style-type: none;
-  padding: 0;
-  margin: 0;
+  padding: $zero;
+  margin: $zero;
 }
 header {
   height: 460px;
@@ -30,49 +34,49 @@ header {
 
 .text-left {
   text-align: right;
-  margin: 0;
+  margin: $zero;
   margin-left: 30%;
 }
 
 .text-right {
   text-align: left;
-  margin: 0;
+  margin: $zero;
   margin-right: 30%;
 }
 .img-left {
-  width: 100%;
-  height: 100%;
+  width: $imgFull;
+  height: $imgFull;
   display: flex;
   align-items: flex-start; 
 }
 .img-right {
-  width: 100%;
-  height: 100%;
+  width: $imgFull;
+  height: $imgFull;
   display: flex;
   align-items: flex-end; 
-  margin: 0;
+  margin: $zero;
 }
 
 div.text {
-  margin: 0;
+  margin: $zero;
 }
 .img-culture {
   display: flex;
   align-items: flex-start; 
-  margin: 0;
+  margin: $zero;
   height:450px;
-  width: 100%;
+  width: $imgFull;
 }
 header h1 {
   color: #fff;
   font-size: 4.8em;
   letter-spacing: 1px;
-  margin: 0;  
+  margin: $zero;
 }
 
 header p {
   font-size: 1.25em;
-  margin: 0;
+  margin: $zero;
   
 }
 
@@ -146,11 +150,8 @@ footer {
     }
     }
   .img-culture {
-    display: flex;
-    align-items: flex-start; 
-    margin: 0;
+    margin: $zero;
     height:200px;
-    width: 100%;
   }
   .right {
     margin-top: 3em;
@@ -159,17 +160,11 @@ footer {
     font-size: .3em;
   }
   .img-left {
-    width: 100%;
     height: 200px;
-    display: flex;
-    align-items: flex-start; 
   }
   .img-right {
-    width: 100%;
     height: 200px;
-    display: flex;
-    align-items: flex-end; 
-    margin: 0;
+    margin: $zero;
   }
   .material-icons {
     font-size: 20px;
@@ -187,7 +182,7 @@ footer {
     padding: .8em;
   }
   div.text {
-    margin: 0;
+    margin: $zero;
   }
   .text-left {
     margin-left: 10%;
@@ -207,13 +202,13 @@ footer {
     p {
       font-size: 1em;  
     }
+    .main-nav {
+      font-size: 1em;
+    }
     }
   .img-culture {
-    display: flex;
-    align-items: flex-start; 
-    margin: 0;
+    margin: $zero;
     height:200px;
-    width: 100%;
   }
   .right {
     margin-top: 3em;
@@ -222,17 +217,11 @@ footer {
     font-size: .3em;
   }
   .img-left {
-    width: 100%;
-    height: 200px;
-    display: flex;
-    align-items: flex-start; 
+    height: 200px; 
   }
   .img-right {
-    width: 100%;
     height: 200px;
-    display: flex;
-    align-items: flex-end; 
-    margin: 0;
+    margin: $zero;
   }
   .material-icons {
     font-size: 20px;
@@ -250,12 +239,12 @@ footer {
     padding: .8em;
   }
   div.text {
-    margin: 0;
+    margin: $zero;
   }
   .text-left {
-    margin-left: 10%;
+    margin-left: $margin;
   }
   .text-right {
-    margin-right: 10%;
+    margin-right: $margin;
   }
 }
